# QuBlock

./: README.md  pyproject.toml
notebooks/: lcu_demo.ipynb
src/blockflow/: __init__.py  backend.py
src/blockflow/compile/: circuit.py  export_qasm.py  optimizers.py
src/blockflow/primitives/: __init__.py  block_encoding.py  linear_operator.py  recipe.py  resources.py  success.py  vector_encoding.py
src/blockflow/programs/: program.py
src/blockflow/semantic/: executor.py  state.py  tracking.py
tests/: test_backend.py  test_block_encoding_and_semantic.py  test_circuit_and_optimizer.py  test_executor_state.py  test_qasm_export.py  test_qiskit_integration.py  test_resources_and_utils.py  test_structured_block_encoding.py  test_vector_encoding.py
