[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qublock"
version = "0.1.0"
description = "Block-encoding primitives and semantic execution for classical simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=blockflow --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
branch = true
source = ["blockflow"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
